--- a/partials/_header.html
+++ b/partials/_header.html
@@ -1,3 +1,3 @@
-<h1 class="title">PHS Download Manager</h1>
+<h3 class="title">PHS Download Manager</h3>
 
-<button class="button" name="runDownload" value="Download All"></button>
+<button class="button" name="runDownload" ng-click="HDC.downloadAll">Download All</button>
