--- a/partials/_header.html
+++ b/partials/_header.html
@@ -1,3 +1,5 @@
 <h3 class="title">PHS Download Manager</h3>
-
-<button class="button" name="runDownload" ng-click="HDC.downloadAll">Download All</button>
+<div class="button-group">
+	<button class="button" name="setDir" ng-click="HDC.setDir">Set Download Directory</button>
+	<button class="button" name="runDownload" ng-click="HDC.downloadAll">Download All</button>
+</div>
