--- a/partials/_header.html
+++ b/partials/_header.html
@@ -1,5 +1,5 @@
 <h3 class="title">PHS Download Manager</h3>
 <div class="button-group">
-	<button class="button" name="setDir" ng-click="HDC.setDir">Set Download Directory</button>
-	<button class="button" name="runDownload" ng-click="HDC.downloadAll">Download All</button>
+	<button class="button" name="setDir">Set Download Directory</button>
+	<button class="button" name="runDownload">Download All</button>
 </div>
